Forgot to move STLmc to Tools/

--- a/Conferences/CAV 2022.md
+++ b/Conferences/CAV 2022.md
@@ -89,4 +89,4 @@
 	✅ Extends [Zelkova](../Tools/Zelkova.md)
 -	[🔓](https://doi.org/10.1007/978-3-031-13185-1_26) STLmc: Robust STL Model Checking of Hybrid Systems Using SMT.
 	[Geunyeol Yu](https://dblp.org/pid/311/8869.html), [Jia Lee](https://dblp.org/pid/14/753.html), [Kyungmin Bae](https://dblp.org/pid/03/7567.html)
-	✅ Presents [STLmc](../Ongoing-work/generated/STLmc.md)
+	✅ Presents [STLmc](../Tools/Checkers/STLmc.md)
