--- a/Conferences/CAV 2022(2).md
+++ b/Conferences/CAV 2022(2).md
@@ -13,13 +13,15 @@
 	✅  Presents [mlir-tv](../Tools/mlir-tv.md)
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_23) Verifying Generalised and Structural Soundness of Workflow Nets via Relaxations.
 	[Michael Blondin](https://dblp.org/pid/117/6024.html), [Filip Mazowiecki](https://dblp.org/pid/129/1633.html), [Philip Offtermatt](https://dblp.org/pid/230/4353.html)
-	⚙️
+	✅  Nameless prototype, expands [[FastForward]]
+	Artifact: https://doi.org/10.6084/m9.figshare.19721674.v2
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_12) Local Search for SMT on Linear Integer Arithmetic.
 	[Shaowei Cai](https://dblp.org/pid/45/8399.html), [Bohan Li ](https://dblp.org/pid/123/2549-2.html), [Xindi Zhang](https://dblp.org/pid/253/7611.html)
-	⚙️
+	✅ Nameless prototype of an algorithm LS-LIA, artifact: https://anonymous.4open.science/r/sls4lia/
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_3) Playing Against Fair Adversaries in Stochastic Games with Total Rewards.
 	[Pablo F. Castro](https://dblp.org/pid/57/1847.html), [Pedro R. D'Argenio](https://dblp.org/pid/61/441.html), [Ramiro Demasi](https://dblp.org/pid/129/9141.html), [Luciano Putruele](https://dblp.org/pid/230/4050.html)
-	⚙️
+	✅ Unclear whether this is available somewhere, possibly in one of the repos at https://github.com/cl-unrc-lab (not linked in the paper)
+	They claim that it is "embedded" in [PRISM-games](../Tools/Checkers/PRISM-games.md) but I cannot find the authors in the "Contributors" of the PRISM-games or PRISM repos.
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_16) Hemiola: A DSL and Verification Tools to Guide Design and Proof of Hierarchical Cache-Coherence Protocols.
 	[Joonwon Choi](https://dblp.org/pid/205/7063.html), [Adam Chlipala](https://dblp.org/pid/52/796.html), [Arvind](https://dblp.org/pid/a/Arvind.html)
 	⚙️
