Added FORKLIFT, Hemiola, MoGym

--- a/Conferences/CAV 2022(2).md
+++ b/Conferences/CAV 2022(2).md
@@ -24,31 +24,31 @@
 	They claim that it is "embedded" in [PRISM-games](../Tools/Checkers/PRISM-games.md) but I cannot find the authors in the "Contributors" of the PRISM-games or PRISM repos.
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_16) Hemiola: A DSL and Verification Tools to Guide Design and Proof of Hierarchical Cache-Coherence Protocols.
 	[Joonwon Choi](https://dblp.org/pid/205/7063.html), [Adam Chlipala](https://dblp.org/pid/52/796.html), [Arvind](https://dblp.org/pid/a/Arvind.html)
-	⚙️
+	✅ Presents [Hemiola](../Tools/Hemiola.md)
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_14) Verified Erasure Correction in Coq with MathComp and VST.
 	[Joshua M. Cohen](https://dblp.org/pid/326/0470.html), [Qinshi Wang](https://dblp.org/pid/198/1170.html), [Andrew W. Appel](https://dblp.org/pid/a/AWAppel.html)
-	⚙️
+	❌ None (case study)
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_7) Sound Automation of Magic Wands.
 	[Thibault Dardinier](https://dblp.org/pid/222/3614.html), [Gaurav Parthasarathy](https://dblp.org/pid/255/7215.html), [Noé Weeks](https://dblp.org/pid/321/0880.html), [Peter Müller ](https://dblp.org/pid/m/PMuller1.html), [Alexander J. Summers](https://dblp.org/pid/76/5160.html)
-	⚙️
+	✅ Extends [Viper](../Tools/Frameworks/Viper.md)
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_6) FORQ-Based Language Inclusion Formal Testing.
 	[Kyveli Doveri](https://dblp.org/pid/299/4209.html), [Pierre Ganty](https://dblp.org/pid/16/5983.html), [Nicolas Mazzocchi](https://dblp.org/pid/202/2438.html)
-	⚙️
+	✅ Presents [FORKLIFT](../Tools/FORKLIFT.md)
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_9) From Spot 2.0 to Spot 2.10: What's New?
 	[Alexandre Duret-Lutz](https://dblp.org/pid/43/6032.html), [Etienne Renault](https://dblp.org/pid/41/9726.html), [Maximilien Colange](https://dblp.org/pid/67/9840.html), [Florian Renkin](https://dblp.org/pid/276/0757.html), [Alexandre Gbaguidi Aisse](https://dblp.org/pid/326/0184.html), [Philipp Schlehuber-Caissier](https://dblp.org/pid/158/9158.html), [Thomas Medioni](https://dblp.org/pid/322/9158.html), [Antoine Martin](https://dblp.org/pid/40/1510.html), [Jérôme Dubois](https://dblp.org/pid/64/9170.html), [Clément Gillard](https://dblp.org/pid/322/9514.html), [Henrich Lauko](https://dblp.org/pid/178/2897.html)
-	⚙️
+	✅ Extends [Spot](../Tools/Frameworks/Spot.md)
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_13) Reasoning About Data Trees Using CHCs.
 	[Marco Faella](https://dblp.org/pid/44/6983.html), [Gennaro Parlato](https://dblp.org/pid/11/1029.html)
-	⚙️
+	✅ Nameless prototype
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_25) Information Flow Guided Synthesis.
 	[Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [Niklas Metzger ](https://dblp.org/pid/296/4267.html), [Yoram Moses](https://dblp.org/pid/81/49.html)
-	⚙️
+	❌ None (uses [BoSyHyper](../Tools/Synthesiser/BoSyHyper.md))
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_26) Randomized Synthesis for Diversity and Cost Constraints with Control Improvisation.
 	[Andreas Gittis](https://dblp.org/pid/322/1058.html), [Eric Vin](https://dblp.org/pid/305/9808.html), [Daniel J. Fremont](https://dblp.org/pid/144/7602.html)
-	⚙️
+	❌ None, Artifact: https://zenodo.org/record/6558391
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_21) MoGym: Using Formal Models for Training and Verifying Decision-making Agents.
 	[Timo P. Gros](https://dblp.org/pid/267/0453.html), [Holger Hermanns](https://dblp.org/pid/h/HolgerHermanns.html), [Jörg Hoffmann ](https://dblp.org/pid/26/836.html), [Michaela Klauck](https://dblp.org/pid/199/2503.html), [Maximilian A. Köhl](https://dblp.org/pid/229/5393.html), [Verena Wolf](https://dblp.org/pid/04/6065.html)
-	⚙️
+	✅  Presents [MoGym](../Tools/MoGym.md)
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_20) Verifying Fairness in Quantum Machine Learning.
 	[Ji Guan](https://dblp.org/pid/205/2739.html), [Wang Fang](https://dblp.org/pid/65/2225.html), [Mingsheng Ying](https://dblp.org/pid/13/6525.html)
 	⚙️
