Add ba format, VeriQFair, Ranker

--- a/Conferences/CAV 2022(2).md
+++ b/Conferences/CAV 2022(2).md
@@ -51,10 +51,10 @@
 	✅  Presents [MoGym](../Tools/MoGym.md)
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_20) Verifying Fairness in Quantum Machine Learning.
 	[Ji Guan](https://dblp.org/pid/205/2739.html), [Wang Fang](https://dblp.org/pid/65/2225.html), [Mingsheng Ying](https://dblp.org/pid/13/6525.html)
-	⚙️
+	✅ Presents [VeriQFair](../Tools/VeriQFair.md)
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_10) Complementing Büchi Automata with Ranker.
 	[Vojtech Havlena](https://dblp.org/pid/175/3898.html), [Ondrej Lengál](https://dblp.org/pid/47/7646.html), [Barbora Smahlíková](https://dblp.org/pid/304/8209.html)
-	⚙️
+	✅ Presents [Ranker](../Tools/Ranker.md)
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_17) Specification-Guided Learning of Nash Equilibria with High Social Welfare.
 	[Kishor Jothimurugan](https://dblp.org/pid/255/7059.html), [Suguman Bansal](https://dblp.org/pid/217/4777.html), [Osbert Bastani](https://dblp.org/pid/21/11275.html), [Rajeev Alur](https://dblp.org/pid/a/RAlur.html)
 	⚙️
