Classified last papers from CAV '22

--- a/Conferences/CAV 2022(2).md
+++ b/Conferences/CAV 2022(2).md
@@ -57,31 +57,28 @@
 	✅ Presents [Ranker](../Tools/Ranker.md)
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_17) Specification-Guided Learning of Nash Equilibria with High Social Welfare.
 	[Kishor Jothimurugan](https://dblp.org/pid/255/7059.html), [Suguman Bansal](https://dblp.org/pid/217/4777.html), [Osbert Bastani](https://dblp.org/pid/21/11275.html), [Rajeev Alur](https://dblp.org/pid/a/RAlur.html)
-	⚙️
+	✅ Nameless prototype implementation of their proposed algorithm, repository: https://github.com/keyshor/high-nash
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_24) Capture, Analyze, Diagnose: Realizability Checking Of Requirements in FRET.
 	[Andreas Katis](https://dblp.org/pid/159/1609.html), [Anastasia Mavridou](https://dblp.org/pid/120/6277.html), [Dimitra Giannakopoulou](https://dblp.org/pid/39/117.html), [Thomas Pressburger](https://dblp.org/pid/27/5966.html), [Johann Schumann](https://dblp.org/pid/s/JohannSchumann.html)
-	⚙️
+	✅ Extends [FRET](../Tools/FRET.md), Artifact: https://doi.org/10.5281/zenodo.6512113
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_4) Automated Expected Amortised Cost Analysis of Probabilistic Data Structures.
 	[Lorenz Leutgeb](https://dblp.org/pid/227/5429.html), [Georg Moser](https://dblp.org/pid/32/2607.html), [Florian Zuleger](https://dblp.org/pid/69/2671.html)
-	⚙️
+	✅ Extends [ATLAS(2)](../Tools/ATLAS(2).md)
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_8) Divide-and-Conquer Determinization of Büchi Automata Based on SCC Decomposition.
 	[Yong Li ](https://dblp.org/pid/93/2334-31.html), [Andrea Turrini](https://dblp.org/pid/51/3769.html), [Weizhi Feng](https://dblp.org/pid/278/3051.html), [Moshe Y. Vardi](https://dblp.org/pid/v/MosheYVardi.html), [Lijun Zhang ](https://dblp.org/pid/76/4015-1.html)
-	⚙️
+	✅ Presents [COLA](../Tools/COLA.md)
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_5) Murxla: A Modular and Highly Extensible API Fuzzer for SMT Solvers.
 	[Aina Niemetz](https://dblp.org/pid/115/4373.html), [Mathias Preiner](https://dblp.org/pid/115/4371.html), [Clark W. Barrett](https://dblp.org/pid/b/ClarkWBarrett.html)
-	⚙️
+	✅ Presents [Murxla](../Tools/Metatools/Murxla.md)
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_11) Even Faster Conflicts and Lazier Reductions for String Solvers.
 	[Andres Nötzli](https://dblp.org/pid/131/4231.html), [Andrew Reynolds ](https://dblp.org/pid/41/9861.html), [Haniel Barbosa](https://dblp.org/pid/116/5052.html), [Clark W. Barrett](https://dblp.org/pid/b/ClarkWBarrett.html), [Cesare Tinelli](https://dblp.org/pid/37/4921.html)
-	⚙️
+	✅ Extends [cvc5](../Tools/Solvers/SMT/cvc5.md)
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_22) Synthesis and Analysis of Petri Nets from Causal Specifications.
 	[Mateus de Oliveira Oliveira](https://dblp.org/pid/39/2248.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_18) Synthesizing Fair Decision Trees via Iterative Constraint Solving.
 	[Jingbo Wang](https://dblp.org/pid/10/1491.html), [Yannan Li](https://dblp.org/pid/136/0901.html), [Chao Wang ](https://dblp.org/pid/w/ChaoWang.html)
-	⚙️
+	✅  Implemented their method SFTree, the tool has no name, repository: https://github.com/bobowang2333/juliaCode
 -	[🔓](https://doi.org/10.1007/978-3-031-13188-2_15) End-to-End Mechanized Proof of an eBPF Virtual Machine for Micro-controllers.
 	[Shenghao Yuan](https://dblp.org/pid/264/2591.html), [Frédéric Besson](https://dblp.org/pid/03/2520.html), [Jean-Pierre Talpin](https://dblp.org/pid/46/4798.html), [Samuel Hym](https://dblp.org/pid/45/1491.html), [Koen Zandberg](https://dblp.org/pid/243/1300.html), [Emmanuel Baccelli](https://dblp.org/pid/07/2121.html)
-	⚙️
--	[🔓](https://doi.org/10.1007/978-3-031-13188-2) Computer Aided Verification - 34th International Conference, CAV 2022, Haifa, Israel, August 7-10, 2022, Proceedings, Part II
-	[Sharon Shoham](https://dblp.org/pid/92/128.html), [Yakir Vizel](https://dblp.org/pid/86/2578.html)
-	⚙️
+	❌ None, case study using [Coq](../Tools/Provers/Coq.md)
